--- a/vecalc/static/style.css
+++ b/vecalc/static/style.css
@@ -1,7 +1,7 @@
 html {
     background-color: rgb(53, 54, 58);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     color: rgb(232, 234, 237);
     letter-spacing: 1px;
     line-height: 1.5;
@@ -11,6 +11,14 @@ a {
     color: rgb(232, 234, 237);
 }
 
+h3, h4, h6 {
+    display: inline;
+}
+
 input {
     width: 44px;
+}
+
+input[type="checkbox"] {
+    width: 14px;
 }
