--- a/vecalc/templates/index.html
+++ b/vecalc/templates/index.html
@@ -13,6 +13,7 @@
                     g_k: $('input[name="g_k"]').val(),
                     q_k: $('input[name="q_k"]').val(),
                     l: $('input[name="l"]').val(),
+                    b: $('input[name="b"]').val(),
                     h: $('input[name="h"]').val(),
                     n_1: $('input[name="n_1"]').val(),
                     n_2: $('input[name="n_2"]').val(),
@@ -30,26 +31,32 @@
 </head>
 <body>
     <form>
-        <p><b>Obciążenie charakterystyczne równomiernie rozłożone:</b><br>
+        <h3>Kalkulator stropów Vector według Eurokodów</h3><br>
+        <h6>Copyright (c) 2020 
+        <a href="mailto:prm.kowalski@gmail.com">Paweł Kowalski</a>
+        <a href="https://stropymalro.pl/">(Stropy Małro)</a></h6>
+        <p><h4>Obciążenie charakterystyczne:</h4><br>
         - stałe <input type="number" step="0.1" name="g_k" value="2.5"> kN/m&#178;<br>
         - zmienne <input type="number" step="0.1" name="q_k" value="2.0"> kN/m&#178;
-        <p><b>Geometria stropu:</b><br>
+        <p><h4>Geometria stropu:</h4><br>
         - rozpiętość w świetle
         <input type="number" step="0.1" name="l" value="2.8" min="1"> m<br>
+        - szerokość płyty
+        <input type="number" step="20" name="b" value="60" min="20" max="120"> cm<br>
         - grubość całkowita
-        <input type="number" name="h" value="15" min="15" max="24"> cm
-        <input type="checkbox" id="s" name="s">
+        <input type="number" name="h" value="15" min="15" max="24"> cm<br>
+        - <input type="checkbox" id="s" name="s">
         <label for="s">wkłady styropianowe</label><br>
-        <p><b>Zbrojenie rozciągane:</b><br>
-        - <input type="number" step="2" name="n_1" value="2" min="2" max="4"> szt.
+        <p><h4>Zbrojenie rozciągane:</h4><br>
+        - <input type="number" step="2" name="n_1" value="2" min="0" max="8"> szt.
         # <input type="number" step="2" name="fi_1" value="8" min="6" max="14"> mm
         na całej długości<br>
-        - <input type="number" step="2" name="n_2" value="0" min="0" max="2"> szt.
+        - <input type="number" step="2" name="n_2" value="0" min="0" max="4"> szt.
         # <input type="number" step="2" name="fi_2" value="8" min="6" max="14"> mm
         dospawane do kratownicy
-        <p><b>Zbrojenie rozdzielcze:</b><br>
+        <p><h4>Zbrojenie rozdzielcze:</h4><br>
         # <input type="number" name="fi_r" value="6" min="4" max="8"> mm
-        <p><a href="#" id="process_input"><button>Oblicz</button></a>
+        <p><a href="#" id="process_input"><button>Oblicz</button></a></p>
     </form>
     <p id="result"></p>
 </body>
