Change l from m to cm and fix data types

--- a/vecalc/templates/index.html
+++ b/vecalc/templates/index.html
@@ -40,7 +40,7 @@
         - zmienne <input type="number" step="0.1" name="q_k" value="2.0"> kN/m&#178;
         <p><h4>Geometria stropu:</h4><br>
         - rozpiętość w świetle
-        <input type="number" step="0.1" name="l" value="2.8" min="1"> m<br>
+        <input type="number" step="10" name="l" value="280" min="80"> cm<br>
         - szerokość płyty
         <input type="number" step="20" name="b" value="60" min="20" max="120"> cm<br>
         - grubość całkowita
