--- a/vecalc/templates/index.html
+++ b/vecalc/templates/index.html
@@ -12,15 +12,16 @@
                 $.getJSON("/_process", {
                     g_k: $('input[name="g_k"]').val(),
                     q_k: $('input[name="q_k"]').val(),
+                    kat: $('select[name="kat"]').val(),
                     l: $('input[name="l"]').val(),
                     b: $('input[name="b"]').val(),
                     h: $('input[name="h"]').val(),
+                    s: $('input[name="s"]').is(':checked'),
                     n_1: $('input[name="n_1"]').val(),
                     n_2: $('input[name="n_2"]').val(),
                     fi_1: $('input[name="fi_1"]').val(),
                     fi_2: $('input[name="fi_2"]').val(),
                     fi_r: $('input[name="fi_r"]').val(),
-                    s: $('input[name="s"]').is(':checked'),
                 }, function(data) {
                     $("#result").html(data.result);
                 });
@@ -37,7 +38,19 @@
         <a href="https://stropymalro.pl/">(Stropy Małro)</a></h6>
         <p><h4>Obciążenie charakterystyczne:</h4><br>
         - stałe <input type="number" step="0.1" name="g_k" value="2.5"> kN/m&#178;<br>
-        - zmienne <input type="number" step="0.1" name="q_k" value="2.0"> kN/m&#178;
+        - zmienne <input type="number" step="0.1" name="q_k" value="2.0"> kN/m&#178;<br>
+        - <select name="kat">
+            <option value="A">Kategoria A: powierzchnie mieszkalne</option>
+            <option value="B">Kategoria B: powierzchnie biurowe</option>
+            <option value="C">Kategoria C: miejsca zebrań</option>
+            <option value="D">Kategoria D: powierzchnie handlowe</option>
+            <option value="E">Kategoria E: powierzchnie magazynowe</option>
+            <option value="F">Kategoria F: powierzchnie ruchu pojazdów ≤ 30 kN</option>
+            <option value="G">Kategoria G: powierzchnie ruchu pojazdów ≤ 160 kN</option>
+            <option value="H">Kategoria H: dachy</option>
+            <option value="S1">Śnieg: miejscowości położone > 1000 m n.p.m.</option>
+            <option value="S2">Śnieg: miejscowości położone ≤ 1000 m n.p.m.</option>
+        </select>
         <p><h4>Geometria stropu:</h4><br>
         - rozpiętość w świetle
         <input type="number" step="10" name="l" value="280" min="80"> cm<br>
