--- a/vecalc/templates/index.html
+++ b/vecalc/templates/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vecalc</title>
     <link href="/static/style.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="/static/favicon.ico">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
     </script>
     <script type="text/javascript">
