--- a/vecalc/templates/index.html
+++ b/vecalc/templates/index.html
@@ -34,14 +34,16 @@
     </script>
 </head>
 <body>
-    <h3>Kalkulator stropów Vector według Eurokodów</h3><br>
+    <h3>KALKULATOR STROPÓW VECTOR</h3><br>
     <h6>Copyright (c) 2020 <a href="mailto:prm.kowalski@gmail.com">Paweł Kowalski</a>
     <a href="https://stropymalro.pl/">(Stropy Małro)</a></h6>
     <form>
-        <p><h4>Obciążenie charakterystyczne:</h4><br>
-        - stałe <input type="number" step="0.1" name="g_k" value="2.5"> kN/m&#178;<br>
-        - zmienne <input type="number" step="0.1" name="q_k" value="2.0"> kN/m&#178;<br>
-        - <select name="kat">
+        <p><h4>OBCIĄŻENIE CHARAKTERYSTYCZNE</h4><br>
+        Stałe &nbsp; g<sub>k</sub> =
+        <input type="number" step="0.1" name="g_k" value="2.5"> kN/m&#178;<br>
+        Zmienne &nbsp; q<sub>k</sub> =
+        <input type="number" step="0.1" name="q_k" value="2.0"> kN/m&#178;<br>
+        <select name="kat">
             <option value="A">Kategoria A: powierzchnie mieszkalne</option>
             <option value="B">Kategoria B: powierzchnie biurowe</option>
             <option value="C">Kategoria C: miejsca zebrań</option>
@@ -53,28 +55,28 @@
             <option value="S1">Śnieg: miejscowości położone > 1000 m n.p.m.</option>
             <option value="S2">Śnieg: miejscowości położone ≤ 1000 m n.p.m.</option>
         </select>
-        <p><h4>Geometria stropu:</h4><br>
-        - rozpiętość w świetle
+        <p><h4>GEOMETRIA STROPU</h4><br>
+        Rozpiętość w świetle &nbsp; l =
         <input type="number" step="10" name="l" value="280" min="80"> cm<br>
-        - szerokość płyty
+        Szerokość płyty &nbsp; b =
         <input type="number" step="20" name="b" value="60" min="20" max="120"> cm<br>
-        - grubość całkowita
+        Grubość całkowita &nbsp; h =
         <input type="number" name="h" value="15" min="15" max="24"> cm<br>
-        - <input type="checkbox" id="s" name="s">
-        <label for="s">wkłady styropianowe</label><br>
-        <p><h4>Zbrojenie rozciągane:</h4><br>
-        - <input type="number" step="2" name="n_1" value="2" min="0" max="8">
+        <label for="s">Wkłady styropianowe &nbsp; s =</label>
+        <input type="checkbox" id="s" name="s">
+        <p><h4>ZBROJENIE</h4><br>
+        <input type="number" step="2" name="n_1" value="2" min="0" max="8">
         # <input type="number" step="2" name="fi_1" value="8" min="6" max="14">
         <small>na całej długości w płycie</small><br>
-        - <input type="number" step="2" name="n_2" value="0" min="0" max="4">
+        <input type="number" step="2" name="n_2" value="0" min="0" max="4">
         # <input type="number" step="2" name="fi_2" value="8" min="6" max="14">
         <small>dospawane do kratownicy</small><br>
-        - <input type="number" step="2" name="n_3" value="0" min="0" max="4">
+        <input type="number" step="2" name="n_3" value="0" min="0" max="4">
         # <input type="number" step="2" name="fi_3" value="8" min="6" max="14">
-        <small>dozbrojenie na płycie</small>
-        <p><h4>Zbrojenie rozdzielcze:</h4><br>
-        # <input type="number" name="fi_r" value="6" min="4" max="8"> mm
-        <p><a href="#" id="process_input"><button>Oblicz</button></a></p>
+        <small>dozbrojenie na płycie</small><br>
+        # <input type="number" name="fi_r" value="6" min="4" max="8">
+        <small>rozdzielcze w płycie</small>
+        <p><a href="#" id="process_input"><button>OBLICZ</button></a></p>
     </form>
     <p id="result"></p>
 </body>
