Rename to stropy_malro

--- a/stropy_malro/templates/index.html
+++ b/stropy_malro/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vecalc</title>
+    <title>Stropy Małro</title>
     <link href="/static/style.css" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="/static/favicon.ico">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
@@ -60,7 +60,7 @@
     </script>
 </head>
 <body>
-    <h3>KALKULATOR STROPÓW VECTOR</h3><br>
+    <h3>KALKULATOR PŁYT STROPOWYCH</h3><br>
     <h6>Copyright (c) 2020 <a href="mailto:prm.kowalski@gmail.com">Paweł Kowalski</a>
     <a href="https://stropymalro.pl/">(Stropy Małro)</a></h6>
     <form>
@@ -81,7 +81,7 @@
             <option value="S1">Śnieg: miejscowości położone > 1000 m n.p.m.</option>
             <option value="S2">Śnieg: miejscowości położone ≤ 1000 m n.p.m.</option>
         </select>
-        <p><h4>GEOMETRIA STROPU</h4><br>
+        <p><h4>GEOMETRIA</h4><br>
         Rozpiętość w świetle &nbsp; l =
         <input type="number" step="10" name="l" value="280" min="80"> cm<br>
         Szerokość płyty &nbsp; b =
