--- a/stropy_malro/templates/index.html
+++ b/stropy_malro/templates/index.html
@@ -43,6 +43,14 @@
                     fi_2: $('input[name="fi_2"]').val(),
                     fi_3: $('input[name="fi_3"]').val(),
                     fi_r: $('input[name="fi_r"]').val(),
+                    n_k: $('input[name="n_k"]').val(),
+                    h_k: $('input[name="h_k"]').val(),
+                    fi_d: $('input[name="fi_d"]').val(),
+                    fi_k: $('input[name="fi_k"]').val(),
+                    fi_g: $('input[name="fi_g"]').val(),
+                    bet: $('select[name="bet"]').val(),
+                    c_min_dur: $('input[name="c_min_dur"]').val(),
+                    delta_c_dev: $('input[name="delta_c_dev"]').val(),
                 }, function(data) {
                     $("#result").html(data.result);
                 });
@@ -64,12 +72,14 @@
     <h6>Copyright (c) 2020 <a href="mailto:prm.kowalski@gmail.com">Paweł Kowalski</a>
     <a href="https://stropymalro.pl/">(Stropy Małro)</a></h6>
     <form>
-        <p><h4>OBCIĄŻENIE CHARAKTERYSTYCZNE</h4><br>
-        Stałe &nbsp; g<sub>k</sub> =
-        <input type="number" step="0.1" name="g_k" value="2.5"> kN/m&#178;<br>
-        Zmienne &nbsp; q<sub>k</sub> =
-        <input type="number" step="0.1" name="q_k" value="2.0"> kN/m&#178;<br>
-        <select name="kat">
+        <p><h4>MAKS. DOP. OBCIĄŻENIA STROPU</h4><br>
+        Stałe char. &nbsp; g<sub>k</sub> =
+        <input type="number" step="0.1" name="g_k" value="2.5"
+        title="Całkowite obciążenie stałe ponad ciężar własny"> kN/m&#178;<br>
+        Zmienne char. &nbsp; q<sub>k</sub> =
+        <input type="number" step="0.1" name="q_k" value="2.0"
+        title="Całkowite obciążenie zmienne: użytkowe, śnieg"> kN/m&#178;<br>
+        <select name="kat" title="Kategoria użytkowania powierzchni">
             <option value="A">Kategoria A: powierzchnie mieszkalne</option>
             <option value="B">Kategoria B: powierzchnie biurowe</option>
             <option value="C">Kategoria C: miejsca zebrań</option>
@@ -93,19 +103,41 @@
         <p><a href="#" id="dobierz"><button>DOBIERZ</button></a></p>
     </form>
     <form>
-        <p><h4><label>ZBROJENIE <input type="checkbox" value="check"></label></h4><br>
+        <p><h4><label>PARAMETRY <input type="checkbox" value="check"></label></h4><br>
         <div class="check box">
             <input type="number" step="2" name="n_1" value="2" min="0" max="8">
             # <input type="number" step="2" name="fi_1" value="8" min="6" max="14">
             <small>na całej długości w płycie</small><br>
-            <input type="number" step="2" name="n_2" value="0" min="0" max="4">
+            <input type="number" name="n_2" value="0" min="0" max="4">
             # <input type="number" step="2" name="fi_2" value="8" min="6" max="14">
             <small>dospawane do kratownicy</small><br>
             <input type="number" step="2" name="n_3" value="0" min="0" max="4">
             # <input type="number" step="2" name="fi_3" value="8" min="6" max="14">
             <small>dozbrojenie na płycie</small><br>
             # <input type="number" name="fi_r" value="6" min="4" max="8">
-            <small>rozdzielcze w płycie</small></p>
+            <small>rozdzielcze w płycie</small><br>
+            <input type="number" name="n_k" value="1" min="1" max="2"
+            title="Ilość kratownic w płycie">
+            <small>krat. E</small>
+            <input type="number" name="h_k" value="10" min="7" max="40"
+            title="Wysokość kratownicy">
+            <input type="number" name="fi_d" value="5" min="5" max="14"
+            title="Średnica prętów dolnych">
+            <input type="number" name="fi_k" value="5" min="5" max="7"
+            title="Średnica prętów krzyżulców">
+            <input type="number" name="fi_g" value="10" min="5" max="14"
+            title="Średnica pręta górnego">
+            <p><select name="bet" title="Klasa betonu prefabrykatów i nadbetonu">
+                <option value="20">Beton C20/25 (B25)</option>
+                <option value="25">Beton C25/30 (B30)</option>
+                <option value="30">Beton C30/37 (B37)</option>
+            </select><br>
+            c<sub>min,dur</sub> =
+            <input type="number" step="5" name="c_min_dur" value="10" min="10" max="20"
+            title="Otulenie ze względu na trwałość stali zbrojeniowej"> mm<br>
+            &Delta;c<sub>dev</sub> =
+            <input type="number" step="5" name="delta_c_dev" value="5" min="0" max="10"
+            title="Odchyłka otulenia"> mm
             <p><a href="#" id="oblicz"><button>OBLICZ</button></a></p>
         </div>
     </form>
