Make a small change of words

--- a/stropy_malro/templates/index.html
+++ b/stropy_malro/templates/index.html
@@ -105,7 +105,7 @@
         <p><a href="#" id="dobierz"><button>DOBIERZ</button></a></p>
     </form>
     <form>
-        <p><h4><label>PARAMETRY <input type="checkbox" value="check"></label></h4><br>
+        <p><h4><label>OBLICZ <input type="checkbox" value="check"></label></h4>
         <div class="check box">
             <input type="number" step="2" name="n_1" value="2" min="0" max="8">
             # <input type="number" step="2" name="fi_1" value="8" min="6" max="14">
